--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ include(DownloadUserver)
 
 find_package(userver COMPONENTS
     core
+	redis
     QUIET
 )
 if(NOT userver_FOUND)
@@ -21,11 +22,10 @@ include_directories(src)
 
 add_library(${PROJECT_NAME}_objs OBJECT
     src/announce_http.cpp
-    src/greeting.cpp
-    src/hello.cpp
 )
 target_link_libraries(${PROJECT_NAME}_objs PUBLIC
     userver::core
+	userver::redis
 )
 
 
@@ -34,22 +34,6 @@ target_link_libraries(${PROJECT_NAME}_objs PUBLIC
 # The Service
 add_executable(${PROJECT_NAME} src/main.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE ${PROJECT_NAME}_objs)
-
-
-# Unit Tests
-add_executable(${PROJECT_NAME}_unittest
-    src/greeting_test.cpp
-)
-target_link_libraries(${PROJECT_NAME}_unittest PRIVATE ${PROJECT_NAME}_objs userver::utest)
-add_google_tests(${PROJECT_NAME}_unittest)
-
-
-# Benchmarks
-add_executable(${PROJECT_NAME}_benchmark
-    src/greeting_benchmark.cpp
-)
-target_link_libraries(${PROJECT_NAME}_benchmark PRIVATE ${PROJECT_NAME}_objs userver::ubench)
-add_google_benchmark_tests(${PROJECT_NAME}_benchmark)
 
 # Functional testing
 userver_testsuite_add_simple()
