--- a/configs/static_config.yaml
+++ b/configs/static_config.yaml
@@ -62,12 +62,24 @@ components_manager:
             throttling_enabled: false
             url_trailing_slash: strict-match
 
-        handler-hello:                    # Finally! Our handler.
-            path: /hello                  # Registering handler by URL '/hello'.
-            method: GET,POST              # It will only reply to GET (HEAD) and POST requests.
-            task_processor: main-task-processor  # Run it on CPU bound task processor
-
         handler-announce-http:
             path: /announce
-            method: GET
-            task_processor: main-task-processor
+            method: GET,POST
+            task_processor: main-task-processor # Run it on CPU bound task processor
+
+        key-value-database:
+            groups:
+              - config_name: taxi-tmp  # Key to lookup in secdist configuration
+                db: taxi-tmp          # Name to refer to the cluster in components::Redis::GetClient()
+ 
+            subscribe_groups: [] # Array of redis clusters to work with in subscribe mode
+ 
+            thread_pools:
+                redis_thread_pool_size: 8
+                sentinel_thread_pool_size: 1
+        secdist: {}
+                                     # Component that stores configuration of hosts and passwords
+        default-secdist-provider:                        # Component that loads configuration of hosts and passwords
+            config: /etc/gytracker_redis/secure_data.json  # Values are supposed to be stored in this file
+            missing-ok: false                             # ... but if the file is missing it is still ok
+            environment-secrets-key: SECDIST_CONFIG      # ... values will be loaded from this environment value
